--- a/index.html
+++ b/index.html
@@ -50,6 +50,31 @@
                 </div>
             </section>
 
+            <section>
+                <div id="section-3">
+                    <div id="info-3">
+                        <h1>Serviços</h1>
+                        <p>Com mais de 10 anos no mercado, o <span>Beautysalon</span> já conquistou clientes de inúmeros países com seus tratamentos exclusivos e totalmente naturais</p>
+                    </div>
+                    <div id="icone-1">
+                        <img id="img-3" src="images/Icon.svg" alt="">
+                        <h1>Terapia capilar</h1>
+                        <p>Terapia completa para couro cabeludo e fios, protegendo todos os tipos de cabelos, inclusive os longos e finos.</p>
+                    </div>
+                    <div id="icone-2">
+                        <img id="img-4" src="images/tesoura.svg" alt="">
+                        <h1>Cortes</h1>
+                        <p>A nossa equipe é repleta de profissionais renomados, famosos por lançarem tendências com cortes diferenciados e clássicos.</p>
+                    </div>
+                    <div id="icone-3">
+                        <img id="img-5" src="images/shampoo.svg" alt="">
+                        <h1>Tratamentos</h1>
+                        <p>O beautysalon conta com diversos tratamentos naturais e totalmente veganos, para qualquer tipo 
+                            de cabelo.</p>
+                    </div>
+                </div>
+            </section>
+
         </main>
 
     </body>
