--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
                 </div>
             </section>
 
+            <section>
+                
+            </section>
+
         </main>
 
     </body>
