correcoes no index

--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
             </section>
 
             <section>
-                
+                <div id="section-4">
+                    
+                </div>
             </section>
 
         </main>
