--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
             </section>
 
             <section>
-                <div id="section-4">  
-                                    
+                <div>                              
                 </div>
             </section>
 
