criando nova section

--- a/index.html
+++ b/index.html
@@ -76,7 +76,10 @@
             </section>
 
             <section>
-                <div>                              
+                <div id="section-4"> 
+                    <div id="info-4">
+                        <h1>Depoimentos de quem já passou por aqui</h1>                             
+                    </div>
                 </div>
             </section>
 
@@ -84,4 +87,3 @@
 
     </body>
 </html>
-Oxy
