section de contato

--- a/index.html
+++ b/index.html
@@ -83,6 +83,30 @@
                 </div>
             </section>
 
+            <section>
+                <div id="section-5">
+                    <div id="info-5">
+                        <h1>Entre em contato com a gente!</h1>
+                        <p>Entre em contato com a Beautysalon, queremos tirar suas dúvidas, ouvir suas críticas e sugestões.</p>
+                        <button id="button-2">
+                            <img src="images/path4.svg">
+                            Entrar em contato</button>
+                    </div>
+                    <div id="contatos">
+                        <img src="../NLW/images/phone 1.svg"> 
+                        <p>11 99845-6754</p>
+                    </div>
+                    <div id="contatos-2">
+                        <img src="../NLW/images/map-pin 1.svg"> 
+                        <p>R. Amauri Souza, 346</p>
+                    </div>
+                    <div id="contatos-3">
+                        <img src="../NLW/images/mail 1.svg"> 
+                        <p>contato@beautysalon.com</p>
+                    </div>
+                </div>
+            </section>
+
         </main>
 
     </body>
