--- a/index.html
+++ b/index.html
@@ -106,8 +106,22 @@
                     </div>
                 </div>
             </section>
-
         </main>
+
+        <footer>
+            <div id="footer">
+                <div id="informacoes-footer">
+                    <h1 id="h1-footer">beauty<span id="span-white">salon</span>.</h1>
+                    <p id="p-footer">©2021 Beautysalon.</p>
+                    <p id="p-footer">Todos os direitos reservados.</p>
+                </div>
+                <div id="icones-footer">
+                    <img src="../NLW/images/instagram 1.svg">
+                    <img src="../NLW/images/facebook 1.svg">
+                    <img src="images/youtube 1.svg">
+                </div>
+            </div>
+        </footer>
 
     </body>
 </html>
