--- a/index.html
+++ b/index.html
@@ -16,21 +16,11 @@
     <body>
 
         <header>
-            <nav id="teste">
+            <nav id="nav-responsiva">
                 <div id="header">
                     <a href="#" id="logo">beauty<span>salon</span>.</a>
                     <div id="icons-menu">
-                        <a href=""><img id="menu" src="../NLW/images/menu.svg"></a>
-                        <a href=""><img id="" src="../NLW//images/close (1).svg"></a>
-                    </div>
-                    <div id="itens">
-                        <ul>
-                            <li><a href="">Início</a></li>
-                            <li><a href="">Sobre</a></li>
-                            <li><a href="">Serviços</a></li>
-                            <li><a href="">Depoimentos</a></li>
-                            <li><a href="">Contato</a></li>
-                        </ul>
+                            ///
                     </div>
                 </div>
             </nav>
