--- a/index.html
+++ b/index.html
@@ -16,12 +16,26 @@
     <body>
 
         <header>
+            <div id="icons-menu" class="icons-menu">
+                <button>
+                    <img id="hamburguer" src="../NLW/images/menu.svg">
+                </button>
+                <button>
+                    <img id="close" src="../NLW/images/close (1).svg">
+                </button>
+                    <div id="lista">
+                        <ul>
+                            <li>Início</li>
+                            <li>Sobre</li>
+                            <li>Serviços</li>
+                            <li>Depoimentos</li>
+                            <li>Contato</li>
+                        </ul>
+                    </div>
+            </div>
             <nav id="nav-responsiva">
                 <div id="header">
                     <a href="#" id="logo">beauty<span>salon</span>.</a>
-                    <div id="icons-menu">
-                            ///
-                    </div>
                 </div>
             </nav>
         </header>
@@ -33,7 +47,7 @@
                     <div id="info-1">
                         <h1 id="first-h1">Saúde natural para os seus cabelos</h1>
                         <p>Um salão exclusivo em São Paulo,<br>especializado em tratamentos naturais</p>
-                        <button>Agendar um horário</button>
+                        <button id="button-1">Agendar um horário</button>
                     </div>
                 </div>
             </section>
