--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
                 </button>
                 <div id="lista">
                     <ul>
-                        <a href="#header" class="letras-menu"><li>Início</li></a>
-                        <a href="#about" class="letras-menu"><li>Sobre</li></a>
-                        <a href="#services" class="letras-menu"><li>Serviços</li></a>
-                        <a href="#depoimentos" class="letras-menu"><li>Depoimentos</li></a>
-                        <a href="#section-5" class="letras-menu"><li>Contato</li></a>
+                        <a href="#header" id="letras-menu" class="letras-menu"><li>Início</li></a>
+                        <a href="#about" id="letras-menu2" class="letras-menu"><li>Sobre</li></a>
+                        <a href="#services" id="letras-menu3" class="letras-menu"><li>Serviços</li></a>
+                        <a href="#depoimentos" id="letras-menu4" class="letras-menu"><li>Depoimentos</li></a>
+                        <a href="#section-5" id="letras-menu5" class="letras-menu"><li>Contato</li></a>
                     </ul>
                 </div>
             </div>
