--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
         <main>
             <section>
                 <div id="section-1">
-                    <img id="img-1" src="../NLW/images/img1.jpg" alt="">               
+                    <div id="imgs-1">
+                        <span id="back-img-1"></span>
+                        <img id="img-1" src="../NLW/images/img1.jpg" alt="">               
+                    </div>
                     <div id="info-1">
                         <h1 id="first-h1">Saúde natural para os seus cabelos</h1>
                         <p>Um salão exclusivo em São Paulo,<br>especializado em tratamentos naturais</p>
