ajeitando position relative quando o menu estiver ativo

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <section>
                 <div id="section-1">
                     <div id="imgs-1">
-                        <span id="back-img-1"></span>
+                        <div id="back-img-1"></div>
                         <img id="img-1" src="../NLW/images/img1.jpg" alt="">               
                     </div>
                     <div id="info-1">
