ajeitando imagens absolutes e relatives em relação ao menu responsivo

--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
 
             <section>
                 <div id="section-2">
-                    <img id="img-2" src="../NLW/images/img2.jpg" alt="">
+                    <div id='imgs-2'>
+                        <div id="back-2"></div>
+                        <img id="imagem-2" src="../NLW/images/img2.jpg" alt="">
+                    </div>
                     <div id="info-2">
                         <h1 class="second-h1" id="about">Sobre nós</h1>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sagittis arcu quis nisi luctus, id accumsan felis tristique. Proin quis bibendum diam. Sed consequat nisl laoreet eros ultricies pellentesque. Nullam in est porta, pellentesque massa vitae, vehicula risus.<br><br><br>
