alteração na ul

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
                 </button>
                 <div id="lista">
                     <ul>
-                        <a href="#header" id="letras-menu" class="letras-menu"><li>Início</li></a>
-                        <a href="#about" id="letras-menu2" class="letras-menu"><li>Sobre</li></a>
-                        <a href="#services" id="letras-menu3" class="letras-menu"><li>Serviços</li></a>
-                        <a href="#depoimentos" id="letras-menu4" class="letras-menu"><li>Depoimentos</li></a>
-                        <a href="#section-5" id="letras-menu5" class="letras-menu"><li>Contato</li></a>
+                        <li><a href="#header" id="letras-menu" class="letras-menu">Início</li></a>
+                        <li><a href="#about" id="letras-menu2" class="letras-menu">Sobre</li></a>
+                        <li><a href="#services" id="letras-menu3" class="letras-menu">Serviços</li></a>
+                        <li><a href="#depoimentos" id="letras-menu4" class="letras-menu">Depoimentos</li></a>
+                        <li><a href="#section-5" id="letras-menu5" class="letras-menu">Contato</li></a>
                     </ul>
                 </div>
             </div>
